--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,141 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Inter", sans-serif;
 }
 
 nav{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr; /* Default to 1 column */
+    grid-template-rows: auto auto; /* Two rows */
+    gap: 10px; /* Optional spacing between grid items */
+    background-color: #1f2937;
     color: white;
-    min-height: 70px;
-    background-color: #1F2937;
-    font-family: 'Poppins', sans-serif;
+    min-height: 550px;
 }
 
-nav a{
-    text-decoration: none;
-    color: white;
-}
-
-.header-logo{
-    flex: 2;
-    margin-left: 200px;
-}
-
-nav ul{
+.row1{
+    grid-column: 1 / -1;
     display: flex;
-    flex: 1;
+    justify-content: space-between;
+}
+
+.intro, .carousel-img{
+    grid-column: span 1;
+}
+
+ul{
+    display: flex;
     justify-content: space-around;
     list-style: none;
-
-    /* background-color: aqua; */
 }
 
+
+
+.info{
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+
+.info h2{
+    font-size: 36px;
+    font-weight: 700;
+    color: #1f2937;
+    text-align: center;
+}
+
+.info .product-cards{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: aliceblue; */
+}
+
+.product-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    width: 250px;
+    height: 250px;
+}
+
+.product-card img{
+    width: 120px;
+    height: 140px;
+    border: 3px solid #3882f6;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    padding: 1px;
+}
+
+.product-card p{
+    font-size: 16px;
+    font-weight: 500;
+    color: #686868;
+    overflow-wrap: break-word;
+    text-align: center;
+}
+
+.quote{
+    height: 60vh;
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-text{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 200;
+    color: #1f2937;
+    text-align: left;
+    width: 800px;
+    margin-bottom: 20px;
+
+}
+
+.quote-author{
+    display: flex;
+    justify-content: end;
+    width: 700px;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.sign-up{
+    display: flex;
+    background-color: #3882f6;
+    color: white;
+    width: 80vw;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: calc(50% - 40vw);
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+}
+
+footer{
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+}
 
