--- a/styles.css
+++ b/styles.css
@@ -7,30 +7,110 @@
     font-family: "Inter", sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+
 nav{
     display: grid;
-    grid-template-columns: 1fr; /* Default to 1 column */
+    grid-template-columns: 1fr 1fr; /* Default to 1 column */
     grid-template-rows: auto auto; /* Two rows */
     gap: 10px; /* Optional spacing between grid items */
     background-color: #1f2937;
     color: white;
-    min-height: 550px;
+    min-height: 450px;
 }
 
 .row1{
     grid-column: 1 / -1;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    /* background-color: rgb(83, 83, 83); */
+    padding-top: 10px;
 }
 
-.intro, .carousel-img{
-    grid-column: span 1;
+.row1 .header-logo{
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    margin-left: 50px;
 }
+
+.row1 div{
+    flex: 2;
+    /* background-color: rgb(255, 132, 132); */
+}
+
+.row1 ul{
+    flex: 1;
+    /* background-color: pink; */
+    padding-top: 10px;
+}
+
+ul li{
+    display: inline;
+    margin: 0 10px;
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+
 
 ul{
     display: flex;
     justify-content: space-around;
     list-style: none;
+}
+
+
+.intro{
+    grid-column: 1;
+    width: 40vw;
+    position: relative;
+    left: calc(50% - 15vw);
+    padding-top: 30px;
+}
+
+.intro h2{
+    color: #f9faf8;
+    font-size: 48px;
+    overflow-wrap: break-word;
+    font-weight: 700;
+}
+
+.intro p{
+    color: #cfcfcf;
+    font-size: 18px;
+    font-weight: 300;
+    margin-top: 10px;
+}
+
+.intro .sign-up-btn{
+    background-color: #3882f6;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 20px;
+    font-weight: 500;
+
+}
+
+.intro .sign-up-btn:hover{
+    background-color: #1f2937;
+    color: #3882f6;
+    border: 1px solid #3882f6;
+    cursor: pointer;
+}
+
+.carousel-img{
+    grid-column: 2;
+    text-align: center;
 }
 
 
@@ -121,13 +201,29 @@ ul{
     color: white;
     width: 80vw;
     height: 100px;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     position: relative;
     left: calc(50% - 40vw);
     margin-top: 50px;
     margin-bottom: 50px;
     border-radius: 10px;
+}
+
+.sign-up .sign-up-btn{
+    background-color: #3882f6;
+    color: white;
+    border-radius: 10px;
+    border: 1px solid white;
+    
+    padding: 10px 20px;
+    font-weight: 500;
+
+}
+
+.sign-up .sign-up-btn:hover{
+   
+    cursor: pointer;
 }
 
 footer{
