--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,9 @@ html {
 
 nav{
     display: grid;
-    grid-template-columns: 1fr 1fr; /* Default to 1 column */
-    grid-template-rows: auto auto; /* Two rows */
-    gap: 10px; /* Optional spacing between grid items */
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto; 
+    gap: 10px;
     background-color: #1f2937;
     color: white;
     min-height: 500px;
@@ -30,6 +30,11 @@ nav{
     padding-top: 10px;
 }
 
+/* Hide checkbox */
+.nav-toggle {
+    display: none;
+}
+
 .hamburger {
     display: none;
     cursor: pointer;
@@ -40,7 +45,6 @@ nav{
     width: 25px;
     height: 3px;
     margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     background-color: white;
 }
@@ -316,18 +320,7 @@ footer{
         position: absolute;
         right: 20px;
         top: 20px;
-    }
-
-    .hamburger.active .bar:nth-child(2) {
-        opacity: 0;
-    }
-
-    .hamburger.active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
-
-    .hamburger.active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
+        z-index: 1000;
     }
 
     .nav-menu {
@@ -344,8 +337,22 @@ footer{
         padding: 20px 0;
     }
 
-    .nav-menu.active {
+    /* checkbox-> checked, show menu */
+    .nav-toggle:checked ~ .nav-menu {
         left: 0;
+    }
+
+    /* Animate hamburger to X -> if it is checked */
+    .nav-toggle:checked ~ .hamburger .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .nav-toggle:checked ~ .hamburger .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .nav-toggle:checked ~ .hamburger .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
     }
 
     .nav-link {
@@ -364,5 +371,29 @@ footer{
     
     .row1 li {
         margin: 16px 0;
+    }
+
+    .nav-link label {
+        display: block;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+    }
+
+    .sign-up {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 90vw;
+        height: auto;
+        left: 5vw;
+        padding: 20px;
+    }
+
+    .sign-up .sign-up-btn {
+        width: 100%;
+        margin: 20px 0px 10px 0px;
     }
 }
